--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
       <div class="big-left-box h-full w-3/5 flex flex-col justify-evenly">
         <div class="box-1 bg-white w-2/3 h-36 p-5">
           <p class="klokketekst text-2xl">Klokken er:</p>
-          <p class="text-5xl text-green-300" id="time">00: 00 : 00</p>
+          <p class="text-5xl text-green-500" id="time">00: 00 : 00</p>
         </div>
         <div class="box-2 bg-white h-44 p-5 w-2/3">
-          <p class="klokketekst text-4xl">
-            Neste bønn <span class="next-prayer text-green-600"> 15:34:00</span>
+          <p class="klokketekst text-4xl"></p>
+          <p class="text-5xl text-center text-red-500" id="countDowntime">
+            1t: 00m : 00s
           </p>
-          <p class="text-5xl text-red-500" id="time">1t: 00m : 00s</p>
-          <p class="text-4xl">igjen til neste bønn</p>
         </div>
       </div>
 
@@ -42,39 +41,47 @@
           <div class="text-3xl p-2 bg-blue-300 my-12">Jummah</div>
         </div>
         <div class="prayer-times flex flex-col my-5 items-stretch">
-          <div class="text-3xl p-2 my-12 bg-green-400" id="fajr-tid">00:00</div>
-          <div class="text-3xl p-2 my-12" id="soloppgang-tid">00:00</div>
-          <div class="text-3xl p-2 my-12 bg-yellow-300" id="duhur-tid">
+          <div class="text-3xl p-2 my-12 bg-green-400 time-value" id="fajr-tid">
             00:00
           </div>
-          <div class="text-3xl p-2 my-12 bg-orange-500" id="Asr-tid">00:00</div>
+          <div class="text-3xl p-2 my-12" id="soloppgang-tid">00:00</div>
           <div
-            class="text-3xl p-2 bg-red-600 my-12 text-white"
+            class="text-3xl p-2 my-12 bg-yellow-300 time-value"
+            id="duhur-tid"
+          >
+            00:00
+          </div>
+          <div class="text-3xl p-2 my-12 bg-orange-500 time-value" id="asr-tid">
+            00:00
+          </div>
+          <div
+            class="text-3xl p-2 bg-red-600 my-12 text-white time-value"
             id="maghrib-tid"
           >
             00:00
           </div>
-          <div class="text-3xl p-2 bg-purple-400 my-12" id="isha-tid">
+          <div
+            class="text-3xl p-2 bg-purple-400 my-12 time-value"
+            id="isha-tid"
+          >
             00:00
           </div>
         </div>
         <div class="jamat-times flex flex-col my-5 items-stretch">
-          <div class="text-3xl p-2 my-12 bg-green-400" id="fajr-jamat-tid">
+          <div
+            class="text-3xl p-2 my-12 bg-green-400 time-value"
+            id="fajr-jamat-tid"
+          >
             55:66
           </div>
-          <div class="text-3xl p-2 my-12" id="">' '</div>
+          <div class="text-3xl p-2 my-12" id="solnedgang-jamat-tid">' '</div>
           <div class="text-3xl p-2 my-12 bg-yellow-300" id="duhur-jamat-tid">
             55:66
           </div>
           <div class="text-3xl p-2 my-12 bg-orange-500" id="Asr-jamat-tid">
             55:66
           </div>
-          <div
-            class="text-3xl p-2 my-12 bg-red-600 text-white"
-            id="maghrib-jamat-tid"
-          >
-            55:66
-          </div>
+          <div class="text-3xl p-2 my-12" id="maghrib-jamat-tid">' '</div>
           <div class="text-3xl p-2 bg-purple-400 my-12" id="isha-jamat-tid">
             55:66
           </div>
