--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
           <span>Start Tid </span> <span>Jamat</span>
         </div>
         <div class="prayer-Names flex flex-col my-5 items-stretch">
-          <div class="text-3xl p-2 p-3 my-12 bg-green-400">Fajr</div>
+          <div class="text-3xl p-2 p-3 my-12 text-green-400">Fajr</div>
           <div class="text-3xl p-2 my-12">Soloppgang</div>
-          <div class="text-3xl p-2 my-12 bg-yellow-300">Duhur</div>
-          <div class="text-3xl p-2 my-12 bg-orange-500">Asr</div>
-          <div class="text-3xl p-2 bg-red-600 my-12 text-white">Maghrib</div>
-          <div class="text-3xl bg-purple-400 p-2 my-12">Isha</div>
-          <div class="text-3xl p-2 bg-blue-300 my-12">Jummah</div>
+          <div class="text-3xl p-2 my-12 text-yellow-300">Duhur</div>
+          <div class="text-3xl p-2 my-12 text-orange-500">Asr</div>
+          <div class="text-3xl p-2 text-red-600 my-12">Maghrib</div>
+          <div class="text-3xl text-purple-400 p-2 my-12">Isha</div>
+          <div class="text-3xl p-2 text-blue-300 my-12">Jummah</div>
         </div>
         <div class="prayer-times flex flex-col my-5 items-stretch">
           <div class="text-3xl p-2 my-12 bg-green-400 time-value" id="fajr-tid">
@@ -69,47 +69,53 @@
         </div>
         <div class="jamat-times flex flex-col my-5 items-stretch">
           <div
-            class="text-3xl p-2 my-12 bg-green-400 time-value"
+            class="text-3xl p-2 my-12 text-green-400 time-value"
             id="fajr-jamat-tid"
           >
             55:66
           </div>
           <div class="text-3xl p-2 my-12" id="solnedgang-jamat-tid">' '</div>
-          <div class="text-3xl p-2 my-12 bg-yellow-300" id="duhur-jamat-tid">
+          <div class="text-3xl p-2 my-12 text-yellow-300" id="duhur-jamat-tid">
             55:66
           </div>
-          <div class="text-3xl p-2 my-12 bg-orange-500" id="Asr-jamat-tid">
+          <div class="text-3xl p-2 my-12 text-orange-500" id="Asr-jamat-tid">
             55:66
           </div>
           <div class="text-3xl p-2 my-12" id="maghrib-jamat-tid">' '</div>
-          <div class="text-3xl p-2 bg-purple-400 my-12" id="isha-jamat-tid">
+          <div class="text-3xl p-2 text-purple-400 my-12" id="isha-jamat-tid">
             55:66
           </div>
-          <div class="text-3xl p-2 bg-blue-300 my-12" id="Jummah-jamat-tid">
+          <div
+            class="text-3xl p-2 text-white bg-black my-12"
+            id="Jummah-jamat-tid"
+          >
             55:66
           </div>
         </div>
         <div class="arabic-names flex flex-col my-5 items-stretch">
-          <div class="text-3xl p-2 my-12 bg-green-400" id="fajr-arabic-name">
+          <div class="text-3xl p-2 my-12 text-green-400" id="fajr-arabic-name">
             الفجر
           </div>
           <div class="text-3xl p-2 my-12" id="soloppgang">طلوع الشمس</div>
-          <div class="text-3xl p-2 my-12 bg-yellow-300" id="duhur-arabic-name">
+          <div
+            class="text-3xl p-2 my-12 text-yellow-300"
+            id="duhur-arabic-name"
+          >
             الظهر
           </div>
-          <div class="text-3xl p-2 my-12 bg-orange-500" id="Asr-arabic-name">
+          <div class="text-3xl p-2 my-12 text-orange-500" id="Asr-arabic-name">
             العصر
           </div>
           <div
-            class="text-3xl p-2 my-12 bg-red-600 text-white"
+            class="text-3xl p-2 my-12 text-red-600 text-white"
             id="maghrib-arabic-name"
           >
             المغرب
           </div>
-          <div class="text-3xl p-2 bg-purple-400 my-12" id="isha-arabic-name">
+          <div class="text-3xl p-2 text-purple-400 my-12" id="isha-arabic-name">
             العشاء
           </div>
-          <div class="text-3xl p-2 bg-blue-300 my-12" id="Jummah-arabic-name">
+          <div class="text-3xl p-2 text-blue-300 my-12" id="Jummah-arabic-name">
             الجمعة
           </div>
         </div>
