--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </footer>
     </div>
 
-    <script src="script2.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
 
