--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
           <p class="text-xl md:text-2xl my-3">العصر</p>
           <p class="text-xl md:text-2xl my-3">المغرب</p>
           <p class="text-xl md:text-2xl my-3">العشاء</p>
-          <p class="text-xl md:text-2xl my-3">الجمعة</p>
+          <p class="text-xl md:text-2xl my-3">جمعة.</p>
         </div>
       </section>
 
